fix jumping UI

--- a/docs/main.css
+++ b/docs/main.css
@@ -197,7 +197,13 @@ h2 {
 
 #price-prediction {
   max-width: 77.5rem;
-  height: 100%;
+  min-height: 30rem;
+}
+
+@media only screen and (max-width: 1240px) {
+  #price-prediction {
+    min-height: 35vw;
+  }
 }
 
 .ticker {
